# nn-from-scratch

./: .gitignore  CMakeLists.txt  README.md
include/: mnist_loader.h  neural_network.h
src/: main.cpp  mnist_loader.cpp  neural_network.cpp
